# GymOs

./: .cursorrules  .gitignore  README.md  REP-006_CODE_QUALITY.md  REP-007_ACCESSIBILITY.md  _mypy_full.txt  ai.config.json  alembic.ini  build.py  gymos.spec  gymos_export.json  main.py  opencode.json  pyproject.toml  requirements.txt  ruff.toml  server.py  setup_github.py  tests_out.txt  tests_out2.txt  tests_out3.txt
.agents/: AGENTS.md  skills.json
.ai/: AGENT.md  AI_BEHAVIOR.md  ARCHITECTURE_RULES.md  CODE_QUALITY_STANDARD.md  CODING_STANDARD.md  CONSTITUTION.md  CURRENT_MILESTONE.md  DATABASE_RULES.md  DECISION_LOG.md  ENGINEERING_CONSTITUTION.md  FITNESS_ENGINE_STANDARD.md  FITNESS_RULES.md  IMPLEMENTATION_RULES.md  PRODUCT_IDENTITY.md  PROJECT_CONTEXT.md  PROJECT_PHILOSOPHY.md  PROJECT_VISION.md  REVIEW_CHECKLIST.md  TASK_TEMPLATE.md  UI_GUIDELINES.md  WORKFLOW.md
.github/workflows/: ci.yml
apps/: __init__.py
core/: __init__.py  di.py
core/cache/: __init__.py
data/: find_styles_results.txt  find_styles_results_prediction.txt  find_styles_results_recovery.txt  program.json  program_ppl_ul_newbie.json  program_ul_newbie.json
docs/: ADAPTATION_POLICY.md  ADAPTIVE_PROGRAMMING.md  ADR-010-predictive-intelligence.md  AI_ENGINE.md  CAPABILITY_HISTORY.md  CHANGELOG.md  CI_CD_REPORT.md  COMMAND_CENTER.md  CONFIDENCE_MODEL.md  COUNTERFACTUAL_ENGINE.md  DASHBOARD.md  DASHBOARD_ARCHITECTURE.md  DATA_INTEGRITY_REPORT.md  DISTRIBUTION.md  DOMAIN_EVENTS.md  ENGINE_ROADMAP.md  EVIDENCE_ENGINE.md  EVIDENCE_GRAPH.md  EVOLUTION_ENGINE.md  EXCEPTION_HANDLING_AUDIT.md  EXPERIENCE_ROADMAP.md  EXPLAINABILITY_PLATFORM.md  FORECAST_MODEL.md  GRAPH_ARCHITECTURE.md  GRAPH_QUERY.md  GUIDE_ACCESSIBILITY.md  GUIDE_INTERACTION.md  GYMBRAIN.md  INSTALLATION_GUIDE.md  INTENT_ENGINE.md  INTENT_MODEL.md  INTENT_PLATFORM.md  KERNEL.md  KNOWLEDGE_EVOLUTION.md  KNOWLEDGE_SYSTEM.md  KNOWLEDGE_VERSIONING.md  KNOWN_LIMITATIONS.md  MULTI_OBJECTIVE_OPTIMIZATION.md  OPTIMIZATION_KNOWLEDGE.md  OPTIMIZATION_MODEL.md  (+74 more)
gymos_frontend/: README.md  pubspec.yaml
knowledge/: aliases.yaml
modules/: __init__.py
nexus/: __init__.py
schemas/: api_models.py  exercise.schema.json  muscle.schema.json  program.schema.json
scripts/: generate_muscle_library.py  migrate_db.py  migrate_v2_fields.py  parse_excel_program.py  seed_demo_data.py  seed_newbie_programs.py
sdk/: __init__.py
shared/: __init__.py  knowledge_loader.py  version.py
tests/: TEST_INFRASTRUCTURE.md  conftest.py
ui/: dashboard_view.py  desktop_integration.py  import_wizard.py  main_window.py  pr_view.py  progress_view.py  settings_view.py  workout_selection_view.py  workout_view.py
(+987 files in other folders)
