[project]
name = "nexus"
version = "0.2.0"
description = "Next Evolution Exercise & Unified System"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]
yaml = ["pyyaml>=6.0"]
security = ["cryptography>=41.0"]
all = ["pyyaml>=6.0", "cryptography>=41.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["core", "nexus", "sdk", "plugins"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
