[project]
name = "gymos"
version = "0.1.0"
description = "Personal Hypertrophy Operating System"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "SQLAlchemy>=2.0",
    "PyYAML>=6.0",
    "pyqtgraph>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "jsonschema>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["modules", "ui", "shared"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
